--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,5 +1,5 @@
 <mat-sidenav-container class="app-container" hasBackdrop="false" [ngClass]="{'collapsed': navCollapsed}">
-    <mat-sidenav [mode]="mobileQuery.matches ? 'over' : 'side'" [opened]="!navClosed">
+    <mat-sidenav [mode]="device.handset ? 'over' : 'side'" [opened]="!navClosed">
         <div class="sidebar-header">
             <div class="brand">
                 <span class="full">
@@ -11,15 +11,17 @@
             </div>
             <a href="javascript:;" class="collapsednav-toggler" (click)="toggleCollapsedNav()">
                 <i class="material-icons" *ngIf="navCollapsed" tabindex="-1">radio_button_unchecked</i>
-                <i class="material-icons" *ngIf="!navCollapsed" tabindex="-1"> {{mobileQuery.matches?'close': 'radio_button_checked'}}</i>
+                <i class="material-icons" *ngIf="!navCollapsed" tabindex="-1"> {{device.handset?'close': 'radio_button_checked'}}</i>
             </a>
         </div>
         <app-nav></app-nav>
     </mat-sidenav>
-    <mat-sidenav-content>
-        <app-header (toggleNav)="toggleCollapsedNav()"></app-header>
+    <mat-sidenav-content (scroll)="onWindowScroll($event)">
+        <app-header (toggleNav)="toggleCollapsedNav()" [ngClass]="{'fixed': fixedHeader}"></app-header>
         <div class="app-content">
-            <router-outlet></router-outlet>
+            <div class="full-height" [@routeAnimation]="getState(o)">
+                <router-outlet #o="outlet"></router-outlet>
+            </div>
         </div>
     </mat-sidenav-content>
 </mat-sidenav-container>
