--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -4,15 +4,62 @@
 }
 
 .app-header {
+    padding-left: 0px !important;
     height: $header-height-sm !important;
     background-color: #fff !important;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    position: relative;
+    z-index: 2;
 
     @media (min-width: map-get($grid-breakpoints, md)) {
         height: $header-height !important;
     }
 }
 
+.header-btn {
+    margin: 0 !important;
+    border-radius: 0 !important;
+    line-height: $header-height !important;
+    min-width: $header-height !important;
+
+    @media only screen and (max-width: map-get($grid-breakpoints, md) - 1) {
+        line-height: $header-height-sm !important;
+        min-width: $header-height-sm !important;
+    }
+    > .material-icons {
+        vertical-align: middle;
+    }
+}
+
 .app-content {
-    height: calc(100% - #{$header-height + $footer-height});
+    &.sticky {
+        .page-title {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+        }
+        .page-content {
+            padding-top: $header-height;
+        }
+    }
+}
+
+// Page
+.page-title {
+    background-color: $gray-200;
+    font-size: 22px;
+    font-weight: normal;
+    line-height: $header-height;
+    padding: 0px 0.6em;
+    position: relative;
+    z-index: 1;
+
+    @media only screen and (max-width: map-get($grid-breakpoints, md) - 1) {
+        line-height: $header-height-sm !important;
+        font-size: 18px;
+    }
+}
+
+.page-content {
 }
