--- a/src/styles/_sidebar.scss
+++ b/src/styles/_sidebar.scss
@@ -142,11 +142,16 @@ mat-sidenav {
     .child {
         overflow-y: hidden;
         max-height: 0;
-        -webkit-transition: all .5s cubic-bezier(0.3, 1, 0.5, 1);
-        transition: all .5s cubic-bezier(0.3, 1, 0.5, 1);
+        -webkit-transition: all 0.5s cubic-bezier(0.3, 1, 0.5, 1);
+        transition: all 0.5s cubic-bezier(0.3, 1, 0.5, 1);
     }
 
     .open {
+        border-left: 4px solid #00796b;
+        overflow-x: hidden;
+        .mat-list-item-content {
+            padding-left: 12px !important;
+        }
         .mat-list-item {
             background-color: rgba(0, 0, 0, 0.1);
         }
