--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -21,7 +21,7 @@ $gray-900: #212529 !default; // $gray-darker
 $black: #000 !default;
 
 // border
-$border: $gray-500;
+$border: $gray-300;
 
 // grid
 $grid-breakpoints: (
@@ -37,3 +37,4 @@ $sidenav-width: 250px;
 $header-height: 56px;
 $header-height-sm: 48px;
 $footer-height: 30px;
+$sidefilter-width: 250px;
