--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -9,7 +9,7 @@
     background-color: #fff !important;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
     position: relative;
-    z-index: 2;
+    z-index: 3;
 
     @media (min-width: map-get($grid-breakpoints, md)) {
         height: $header-height !important;
@@ -32,6 +32,11 @@
 }
 
 .app-content {
+    min-height: calc(100% - #{$header-height + $footer-height});
+    @media only screen and (max-width: map-get($grid-breakpoints, md) - 1) {
+        min-height: calc(100% - #{$header-height-sm});
+    }
+
     &.sticky {
         .page-title {
             position: fixed;
@@ -53,7 +58,7 @@
     line-height: $header-height;
     padding: 0px 0.6em;
     position: relative;
-    z-index: 1;
+    z-index: 2;
 
     @media only screen and (max-width: map-get($grid-breakpoints, md) - 1) {
         line-height: $header-height-sm !important;
@@ -62,4 +67,26 @@
 }
 
 .page-content {
+}
+
+// Filter
+.filter-sidebar {
+    min-height: calc(100vh - 112px);
+    
+    @media only screen and (max-width: map-get($grid-breakpoints, md) - 1) {
+        min-height: calc(100vh - 96px);
+    }
+
+    mat-sidenav {
+        width: $sidefilter-width;
+        background-color: $white !important;
+        border-left: 1px solid $border;
+        padding: 15px;
+    }
+}
+
+.filter-row {
+    padding: 15px 15px 0px 15px;
+    box-shadow: 0 2px 5px -1px rgba(0, 0, 0, 0.16), 0 8px 10px -6px rgba(0, 0, 0, 0.12);
+    position: relative;
 }
