--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -1,3 +1,23 @@
 .text-center {
-  text-align: center;
+    text-align: center;
+}
+
+// Status Pills
+.status-pill {
+    background-color: #888;
+    color: #fff;
+    padding: 2px 10px;
+    border-radius: 3px;
+    &.success {
+        background-color: #66bb6a;
+    }
+    &.danger {
+        background-color: #ef5350;
+    }
+    &.progress {
+        background-color: orange;
+    }
+    &.parked {
+        background-color: #888;
+    }
 }
