--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -15,7 +15,7 @@
                     <mat-checkbox disableRipple="true" color="primary" class="float-left" formControlName="Remember">Remember</mat-checkbox>
                     <div class="divider divider-md"></div>
                     <div class="text-center">
-                        <button mat-raised-button type="submit" color="primary" loading-entity="login">Login</button>
+                        <button mat-raised-button type="submit" color="primary" loading-button="login">Login</button>
                     </div>
                 </form>
             </mat-card-content>
