--- a/src/styles/_space.scss
+++ b/src/styles/_space.scss
@@ -1,4 +1,4 @@
-.spacer{
+.spacer {
     flex: 1 1 auto;
 }
 
@@ -112,4 +112,12 @@ span.block {
 //
 .margin-b-lg {
     margin-bottom: 30px;
+}
+
+.padding-15 {
+    padding: 15px !important;
+}
+
+.left-margin-10 {
+    margin-left: 10px !important;
 }
