--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -9,7 +9,7 @@
     background-color: #fff !important;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
     position: relative;
-    z-index: 3;
+    z-index: 4;
 
     @media (min-width: map-get($grid-breakpoints, md)) {
         height: $header-height !important;
@@ -32,6 +32,7 @@
 }
 
 .app-content {
+    background-color: whitesmoke;
     min-height: calc(100% - #{$header-height + $footer-height});
     @media only screen and (max-width: map-get($grid-breakpoints, md) - 1) {
         min-height: calc(100% - #{$header-height-sm});
@@ -43,6 +44,8 @@
             top: 0;
             width: 100%;
             box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+            height: $header-height !important;
+            font-size: 18px;
         }
         .page-content {
             padding-top: $header-height;
@@ -52,17 +55,20 @@
 
 // Page
 .page-title {
-    background-color: $gray-200;
+    background-color: $gray-200 !important;
     font-size: 22px;
     font-weight: normal;
-    line-height: $header-height;
     padding: 0px 0.6em;
     position: relative;
-    z-index: 2;
+    z-index: 3;
 
     @media only screen and (max-width: map-get($grid-breakpoints, md) - 1) {
-        line-height: $header-height-sm !important;
+        height: $header-height-sm !important;
         font-size: 18px;
+    }
+
+    .back-arrow {
+        margin-left: -16px !important;
     }
 }
 
@@ -72,7 +78,7 @@
 // Filter
 .filter-sidebar {
     min-height: calc(100vh - 112px);
-    
+
     @media only screen and (max-width: map-get($grid-breakpoints, md) - 1) {
         min-height: calc(100vh - 96px);
     }
