--- a/src/styles/_material-override.scss
+++ b/src/styles/_material-override.scss
@@ -17,19 +17,111 @@ th.mat-header-cell:last-child {
     padding-right: 24px !important;
 }
 
-.mat-paginator{
+.mat-paginator {
     position: fixed;
     bottom: 0;
     left: 0;
     right: 0;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
-.table-container{
+.table-container {
     padding-bottom: 56px;
 }
+
 // Outline
 .mat-form-field-appearance-outline .mat-form-field-outline-thick .mat-form-field-outline-end,
 .mat-form-field-appearance-outline .mat-form-field-outline-thick .mat-form-field-outline-gap,
 .mat-form-field-appearance-outline .mat-form-field-outline-thick .mat-form-field-outline-start {
     border-width: 1px !important;
+}
+[required='true'] {
+    .mat-form-field-outline-end,
+    .mat-form-field-outline-gap,
+    .mat-form-field-outline-start {
+        color: $accent;
+    }
+    // .mat-form-field-label {
+    //     color: $accent !important;
+    // }
+}
+
+// Progressbar
+.mat-progress-bar {
+    height: 2px !important;
+}
+
+// Tab
+.page-tab {
+    .mat-tab-header {
+        background-color: $gray-200 !important;
+        border-bottom: 1px solid rgba(#000, 0.05) !important;
+    }
+    .mat-tab-label:focus {
+        background-color: $gray-200 !important;
+    }
+    .mat-tab-label-active {
+        opacity: 1 !important;
+        color: $primary !important;
+    }
+}
+
+// Buttons
+button.square {
+    border-radius: 0 !important;
+    line-height: 36px !important;
+    min-width: 36px !important;
+    padding: 0px 6px !important;
+
+    > .material-icons {
+        vertical-align: middle;
+    }
+}
+button.active {
+    color: $accent !important;
+    background-color: $gray-200 !important;
+}
+
+// Dialouge
+.full-dialog {
+    width: 100vw !important;
+    max-width: 100vw !important;
+    height: 100vh !important;
+
+    .mat-dialog-container {
+        padding: 0px !important;
+        border-radius: 0px !important;
+
+        .mat-dialog-title {
+            margin: 0px !important;
+            padding: 12px 0px 12px 12px !important;
+
+            .back {
+                margin: -12px 0px -12px -12px !important;
+            }
+            .close {
+                margin: -12px 0px !important;
+            }
+        }
+        .mat-dialog-content {
+            margin: 0px !important;
+            padding: 0px !important;
+            max-height: calc(100vh - 116px) !important;
+            height: calc(100vh - 116px) !important;
+            background-color: $gray-100 !important;
+        }
+
+        .mat-dialog-actions {
+            margin: 0px !important;
+            padding: 12px !important;
+        }
+    }
+
+    &.no-action {
+        .mat-dialog-content {
+            margin: 0px !important;
+            padding: 0px !important;
+            max-height: calc(100vh - 56px) !important;
+            height: calc(100vh - 56px) !important;
+        }
+    }
 }
