--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,11 +1,19 @@
 html {
-  height: 100%;
+    height: 100%;
 }
 
 body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  font-family:  "Roboto", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-  font-size: 14px;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto', -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto,
+        'Helvetica Neue', Arial, sans-serif;
+    font-size: 14px;
+}
+
+.float-left {
+    float: left;
+}
+.float-right {
+    float: right;
 }
