--- a/src/styles/_box.scss
+++ b/src/styles/_box.scss
@@ -1,12 +1,55 @@
 .box {
+    user-select: text;
     padding: 15px;
+    position: relative;
     &.white {
         background-color: $white;
     }
 
+    &.border {
+        border: 1px solid $border;
+        border-top-width: 0px;
+        &.first {
+            border-top-width: 1px;
+        }
+    }
+
+    &.hover {
+        cursor: pointer;
+        &:hover {
+            background-color: rgba(0, 0, 0, 0.05);
+        }
+    }
     @media only screen and (max-width: map-get($grid-breakpoints, lg) - 1) {
         &.sm-pad-0 {
-            margin: 0px -15px -15px -15px;
+            margin: 0px -15px 0px -15px;
+        }
+    }
+
+    &:hover {
+        .overlay {
+            opacity: 1;
+        }
+    }
+    .overlay {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        background: rgb(0, 0, 0);
+        background: rgba(0, 0, 0, 0.2);
+        width: 100%;
+        transition: 0.2s ease-in-out;
+        opacity: 0;
+        height: 100%;
+        text-align: center;
+
+        .buttons {
+            position: absolute;
+            top: 50%;
+            left: 0;
+            height: 36px;
+            width: 100%;
+            margin: -18px 0 0 0;
         }
     }
 }
