--- a/src/styles/_space.scss
+++ b/src/styles/_space.scss
@@ -98,6 +98,9 @@ span.block {
     padding-left: 0 !important;
     padding-right: 0 !important;
 }
+.no-padding-r {
+    padding-right: 0px !important;
+}
 .no-shadow {
     box-shadow: 0;
 }
@@ -106,6 +109,9 @@ span.block {
 }
 .pull-in {
     margin-left: -15px;
+    margin-right: -15px;
+}
+.pull-in-r {
     margin-right: -15px;
 }
 
