--- a/src/styles/_box.scss
+++ b/src/styles/_box.scss
@@ -2,8 +2,12 @@
     user-select: text;
     padding: 15px;
     position: relative;
-    &.no-pad{
+    &.no-pad {
         padding: 0px;
+    }
+
+    &.no-pad-v {
+        padding: 0px 15px;
     }
 
     &.white {
@@ -16,6 +20,9 @@
         &.first {
             border-top-width: 1px;
         }
+    }
+    &.invalid{
+        border: 1px solid $warn;
     }
 
     &.hover {
