--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -38,3 +38,11 @@
 .line-breaker {
     white-space: pre-line !important;
 }
+
+// Input
+.full-input {
+    width: 100%;
+    height: 100%;
+    padding: 0px 0px 0px 5px;
+    border: none;
+}
