--- a/src/app/controls/grid-control/grid-control.component.html
+++ b/src/app/controls/grid-control/grid-control.component.html
@@ -1,6 +1,6 @@
 <mat-sidenav-container class="filter-sidebar">
     <mat-sidenav #sidenav [mode]="device.handset ? 'over' : 'side'" [opened]="!navClosed" position="end">
-        <filter-control *ngIf="filters" [filters]="filters" (apply)="applyFilter($event)"></filter-control>
+        <filter-control *ngIf="filters" [statuses]="statuses" [filters]="filters" (apply)="applyFilter($event)"></filter-control>
     </mat-sidenav>
     <mat-sidenav-content>
         <div class="filter-row" fxLayout="row" fxLayoutGap="15px">
@@ -8,13 +8,7 @@
                 <text-control width="100%" label="Search" placeholder="Type to search..." [control]="searchCtrl" suffix="search"></text-control>
             </div>
             <div fxFlex="25%">
-                <mat-form-field appearance="outline" style="max-width: 100%" *ngIf="statuses">
-                    <mat-label>Status</mat-label>
-                    <mat-select [formControl]="statusCtrl">
-                        <mat-option value="">All</mat-option>
-                        <mat-option *ngFor="let status of statuses" [value]="status">{{status.name}}</mat-option>
-                    </mat-select>
-                </mat-form-field>
+                <dropdown-control *ngIf="statuses" forFilter="true" label="Status" [data]="statuses" [control]="statusCtrl"></dropdown-control>
             </div>
             <div class="spacer"></div>
             <button mat-icon-button class="float-right" type="button" matTooltip="Advance Filter" (click)="navClosed = !navClosed">
