--- a/src/app/controls/list-control/list-control.component.html
+++ b/src/app/controls/list-control/list-control.component.html
@@ -5,7 +5,7 @@
     <mat-sidenav-content>
         <mat-progress-bar mode="indeterminate" loading-bar="search"></mat-progress-bar>
         <mat-nav-list class="data-list">
-            <mat-list-item *ngFor="let item of (data | async)?.items" (click)="select(item.id)">
+            <mat-list-item *ngFor="let item of (data | async)?.items" (click)="select(item.id)" [ngClass]="{'selected': selection.isSelected(item.id)}">
                 <div matLine class="header">{{item.header}}</div>
                 <div matLine class="subheader">{{item.subheader}}</div>
                 <div matLine class="number" *ngIf="item.number"># {{item.number}} &nbsp;
