--- a/src/app/stock/category/detail/attribute/category-attribute.component.html
+++ b/src/app/stock/category/detail/attribute/category-attribute.component.html
@@ -10,7 +10,7 @@
                 <!-- Parent -->
                 <div fxLayout="row">
                     <div fxFlex style="line-height: 40px">
-                        <span class="mat-h2">{{attribute.attributeName}}</span>
+                        <span class="mat-h2 color-gray">{{attribute.attributeName}}</span>
                     </div>
                     <div fxFlex="40px">
                         <button mat-icon-button [matMenuTriggerFor]="appMenu" [matMenuTriggerData]="{id: attribute.categoryAttributeId, hasChild:attribute.childAttributes.length>0}">
