--- a/src/styles/_box.scss
+++ b/src/styles/_box.scss
@@ -21,7 +21,12 @@
             border-top-width: 1px;
         }
     }
-    &.invalid{
+
+    &.border-box {
+        border: 1px solid $border;
+    }
+
+    &.invalid {
         border: 1px solid $warn;
     }
 
@@ -62,5 +67,9 @@
             width: 100%;
             margin: -18px 0 0 0;
         }
+    }
+
+    .image {
+        width: 100%;
     }
 }
