--- a/src/styles/_image.scss
+++ b/src/styles/_image.scss
@@ -29,7 +29,7 @@
 
     @media only screen and (max-width: map-get($grid-breakpoints, lg) - 1) {
         max-height: 100px;
-        max-width: 100px;
+        width: 100px;
     }
 
     .overlay {
